--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "Choi Young — Documented Life Portfolio"
+title: "Systems Engineering Journey — My Roadmap & Portfolio"
 name: "Choi Young"
-description: "A documented portfolio — story, research, creations, and life."
+description: "A journey through research, teaching, and engineering — turning struggles into growth."
 url: "https://youngchoi-arrieta.github.io"
 baseurl: "/system_engineer"
 
