--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Systems Engineering Journey — My Roadmap & Portfolio"
+title: "Young Choi - The Crafted Life"
 name: "Choi Young"
 description: "A journey through research, teaching, and engineering — turning struggles into growth."
 url: "https://youngchoi-arrieta.github.io"
