--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,12 @@ main:
   - title: "Study"
     url: /study/
     children:
-      - title: "Engineering"
-        url: /study/engineering/
+          - title: "5급 전기직 기술고시 문제풀이"
+            url: /study/engineering/gov_exam/
+          - title: "일본 전기주임기술자 문제풀이"
+            url: /study/engineering/denken1/
+          - title: "국립대 전기공학과 편입학고사 문제풀이"
+            url: /study/engineering/univtransfer/
       - title: "Physics"
         url: /study/physics/
       - title: "Math"
