--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,10 @@ main:
   - title: "Home"
     url: /
   - title: "Study"
-    url: /study/studyindex.md
-    children:
+    url: /study/
+    - title: "Engineering"
+        url: /study/engineering/
+        children:
           - title: "5급 전기직 기술고시 문제풀이"
             url: /study/engineering/gisulgosi.html
           - title: "일본 전기주임기술자 문제풀이"
